# arboles-madrid

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  README.md  main.py
backend/scripts/: blend_networks.py  create_network.py  download_osm.py  map_network.py  map_trees.py  test_routing.py  to_csv.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: InfoModal.jsx  MapView.jsx  SummaryPanel.jsx
